--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemailer": "^6.5.0"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
