--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "excel4node": "^1.7.2",
     "express": "^4.17.1",
     "nodemailer": "^6.5.0"
   },
