--- a/src/client/package.json
+++ b/src/client/package.json
@@ -5,10 +5,12 @@
   "proxy": "http://localhost:3000/",
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll": "^1.8.2",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
   },
