--- a/src/client/.eslintrc.json
+++ b/src/client/.eslintrc.json
@@ -31,7 +31,7 @@
   ],
   "rules": {
     "no-use-before-define": "off",
- //   "react/prop-types": "off",
+    "react/prop-types": "off",
     "react/jsx-props-no-spreading": "off",
     "@typescript-eslint/no-use-before-define": ["error"],
     "prettier/prettier": "error",
