--- a/src/client/package.json
+++ b/src/client/package.json
@@ -32,6 +32,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-lottie": "^1.2.5",
     "@types/react-router-dom": "^5.1.7",
     "@types/styled-components": "^5.1.8",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
