fix: errors on cnpj

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev": "concurrently \"yarn start_node\" \"yarn start_client\" "
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "concurrently": "^6.0.0",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
