--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "dotenv": "^8.2.0",
     "excel4node": "^1.7.2",
     "express": "^4.17.1",
-    "nodemailer": "^6.5.0"
+    "lodash": "^4.17.21",
+    "nodemailer": "^6.5.0",
+    "yup": "^0.32.9"
   },
   "devDependencies": {
     "@types/cors": "^2.8.10",
