--- a/src/client/package.json
+++ b/src/client/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.21.1",
     "file-saver": "^2.0.5",
     "firebase": "^8.3.1",
+    "git": "^0.1.5",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
@@ -19,6 +20,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-text-mask": "^5.4.3",
+    "react-tree-graph": "https://github.com/Rodrigobanselmo/react-tree-graph.git",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
@@ -50,6 +52,8 @@
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
     "prettier": "^2.2.1",
+    "react-sortable-tree": "^2.8.0",
+    "react-sortable-tree-theme-full-node-drag": "^1.1.0",
     "typescript": "^4.1.2"
   },
   "scripts": {
