--- a/src/client/package.json
+++ b/src/client/package.json
@@ -16,6 +16,7 @@
     "react-lottie": "^1.2.3",
     "react-number-format": "^4.5.1",
     "react-redux": "^7.2.2",
+    "react-resize-detector": "^6.6.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
