--- a/src/client/package.json
+++ b/src/client/package.json
@@ -11,6 +11,7 @@
     "file-saver": "^2.0.5",
     "firebase": "^8.3.1",
     "git": "^0.1.5",
+    "jszip": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-lottie": "^1.2.3",
@@ -43,6 +44,7 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
+    "clone": "^2.1.2",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.10.1",
