--- a/src/client/package.json
+++ b/src/client/package.json
@@ -8,12 +8,14 @@
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
     "axios": "^0.21.1",
+    "clone": "^2.1.2",
     "file-saver": "^2.0.5",
     "firebase": "^8.3.1",
     "git": "^0.1.5",
     "jszip": "^3.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-edit-text": "^4.0.1",
     "react-lottie": "^1.2.3",
     "react-number-format": "^4.5.1",
     "react-redux": "^7.2.2",
@@ -44,7 +46,6 @@
     "@types/uuid": "^8.3.0",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
-    "clone": "^2.1.2",
     "eslint": "^7.22.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^6.10.1",
