--- a/src/client/package.json
+++ b/src/client/package.json
@@ -55,9 +55,13 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
+    "memoize-one": "^5.1.1",
     "prettier": "^2.2.1",
     "react-sortable-tree": "^2.8.0",
     "react-sortable-tree-theme-full-node-drag": "^1.1.0",
+    "react-virtualized": "^9.22.3",
+    "react-virtualized-auto-sizer": "^1.0.5",
+    "react-window": "^1.8.6",
     "typescript": "^4.1.2"
   },
   "scripts": {
