--- a/src/client/package.json
+++ b/src/client/package.json
@@ -24,6 +24,7 @@
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "react-text-mask": "^5.4.3",
+    "react-toggle-dark-mode": "^1.0.4",
     "react-tree-graph": "https://github.com/Rodrigobanselmo/react-tree-graph.git",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
