--- a/src/client/package.json
+++ b/src/client/package.json
@@ -14,6 +14,8 @@
     "git": "^0.1.5",
     "jszip": "^3.6.0",
     "react": "^17.0.1",
+    "react-dnd": "^14.0.2",
+    "react-dnd-html5-backend": "^14.0.0",
     "react-dom": "^17.0.1",
     "react-edit-text": "^4.0.1",
     "react-lottie": "^1.2.3",
