--- a/src/client/package.json
+++ b/src/client/package.json
@@ -59,6 +59,7 @@
     "eslint-plugin-prettier": "^3.3.1",
     "eslint-plugin-react": "^7.21.5",
     "eslint-plugin-react-hooks": "^4",
+    "faker": "^5.5.3",
     "memoize-one": "^5.1.1",
     "prettier": "^2.2.1",
     "react-sortable-tree": "^2.8.0",
