--- a/src/client/package.json
+++ b/src/client/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^17.0.1",
     "react-edit-text": "^4.0.1",
     "react-lottie": "^1.2.3",
+    "react-multi-select-component": "^4.0.1",
     "react-number-format": "^4.5.1",
     "react-redux": "^7.2.2",
     "react-resize-detector": "^6.6.4",
@@ -33,7 +34,8 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.11.4",
