--- a/src/client/package.json
+++ b/src/client/package.json
@@ -4,11 +4,14 @@
   "private": true,
   "proxy": "http://localhost:3000/",
   "dependencies": {
+    "@date-io/date-fns": "1.x",
     "@fnando/cnpj": "^1.0.2",
     "@material-ui/core": "^4.11.3",
     "@material-ui/icons": "^4.11.2",
+    "@material-ui/pickers": "^3.3.10",
     "axios": "^0.21.1",
     "clone": "^2.1.2",
+    "date-fns": "^2.21.2",
     "file-saver": "^2.0.5",
     "firebase": "^8.3.1",
     "git": "^0.1.5",
